# langchain-postgres

./: .gitignore  Async explainer.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  pyproject.toml  v2_design_overview.md
.github/actions/uv_setup/: action.yml
.github/workflows/: _lint.yml  _release.yml  _test.yml  ci.yml
docs/: v2_design_overview.md
examples/: langgraph_persistence.ipynb  migrate_pgvector_to_pgvectorstore.ipynb  migrate_pgvector_to_pgvectorstore.md  pg_chat_message_history.ipynb  pg_vectorstore.ipynb  pg_vectorstore_how_to.ipynb  vectorstore.ipynb
langchain_postgres/: __init__.py  _utils.py  async_vectorstore.py  chat_message_histories.py  checkpoint.py  engine.py  indexes.py  translator.py  vectorstore.py  vectorstores.py  vectorstores2.py  vectorstores_ppr.py
langchain_postgres/indexer/: document_indexer.py  schema01.py  vectorstore_v2.py
langchain_postgres/utils/: pgvector_migrator.py
langchain_postgres/v2/: async_chat_message_history.py  async_vectorstore.py  chat_message_history.py  engine.py  hybrid_search_config.py  indexes.py  vectorstores.py
langchain_postgres/vectorstore/: async_vectorstore.py  v2.py
langchain_postgres/vectorstores/: document_indexer.py
tests/: __init__.py  utils.py
tests/integration/: test_pgvector_metadata_integration.py
tests/unit_tests/: fake_embeddings.py  test_async_pg_vectorstore.py  test_async_pg_vectorstore_from_methods.py  test_async_pg_vectorstore_index.py  test_async_pg_vectorstore_search.py  test_chat_histories.py  test_checkpointer.py  test_document_indexer.py  test_engine.py  test_imports.py  test_indexes.py  test_lazy_chat_message_histories.py  test_pg_vectorstore.py  test_pg_vectorstore_from_methods.py  test_pg_vectorstore_index.py  test_pg_vectorstore_search.py  test_pg_vectorstore_standard_suite.py  test_pgvector_metadata.py  test_vectorstore.py  test_vectorstore_standard_tests.py
tests/unit_tests/fixtures/: filtering_test_cases.py  metadata_filtering_data.py
tests/unit_tests/query_constructors/: test_pgvector.py
tests/unit_tests/v1/: test_chat_histories.py  test_deprecation.py  test_pgvector_length_validation.py  test_vectorstore.py  test_vectorstore_standard_tests.py
tests/unit_tests/v2/: test_async_chat_message_history.py  test_async_pg_vectorstore.py  test_async_pg_vectorstore_from_methods.py  test_async_pg_vectorstore_index.py  test_async_pg_vectorstore_search.py  test_async_vectorstore_no_mutation.py  test_chat_message_history.py  test_engine.py  test_hybrid_search_config.py  test_indexes.py  test_pg_vectorstore.py  test_pg_vectorstore_from_methods.py  test_pg_vectorstore_index.py  test_pg_vectorstore_search.py  test_pg_vectorstore_standard_suite.py
