[project]
name = "langchain-postgres"
version = "0.0.15"
description = "An integration package connecting Postgres and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-postgres"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "asyncpg>=0.30.0",
    "langchain-core>=0.2.13,<0.4.0",
    "pgvector>=0.2.5,<0.4",
    "psycopg[binary]>=3,<4",
    "psycopg-pool>=3.2.1,<4",
    "sqlalchemy[asyncio]>=2,<3",
    "numpy>=1.21,<3",
]

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-postgres/tree/master/langchain_postgres"

[dependency-groups]
test = [
    "codespell>=2.4.1",
    "langchain-tests==0.3.7",
    "mypy>=1.15.0",
    "psycopg[binary]>=3,<4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "pytest-watcher>=0.4.3",
    "ruff>=0.9.7",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--strict-markers --strict-config --durations=5"
# Global timeout for all tests. There should be a good reason for a test to 
# takemore than 30 seconds.
timeout = 30
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = []
asyncio_mode = "auto"


[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples,templates,*.trig'
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate,aadd,symbl,precesses,accademia,nin'

[tool.ruff.lint.extend-per-file-ignores]
"tests/unit_tests/v2/**/*.py" = [
  "E501",
]

"langchain_postgres/v2/**/*.py" = [
  "E501",
]

"langchain_postgres/utils/**/*.py" = [
  "E501",
  "T201", # Allow print
]


"examples/**/*.ipynb" = [
  "E501",
  "T201", # Allow print
]



